out/production/Compilador/AnalizadorSintactico/y.output
   0  $accept : programa $end

   1  programa : ID bloque_sentencias

   2  bloque_try : TRY sentencia_try CATCH BEGIN sentencia_compuesta_try END
   3             | TRY sentencia_try error BEGIN sentencia_compuesta_try END
   4             | TRY sentencia_try CATCH BEGIN sentencia_compuesta_try error
   5             | TRY sentencia_try CATCH error sentencia_compuesta_try END

   6  bloque_sentencias : sentencia_declarativa BEGIN sentencia_compuesta END ';'
   7                    | sentencia_declarativa BEGIN sentencia_compuesta END error
   8                    | sentencia_declarativa BEGIN sentencia_compuesta error ';'
   9                    | BEGIN sentencia_compuesta END ';'
  10                    | sentencia_simple
  11                    | sentencia_declarativa error sentencia_compuesta END ';'
  12                    | error sentencia_compuesta END ';'
  13                    | BEGIN sentencia_compuesta error ';'
  14                    | BEGIN sentencia_compuesta END error

  15  sentencia_declarativa : sentencia_declarativa declaracion ';'
  16                        | sentencia_declarativa declaracion error
  17                        | declaracion ';'
  18                        | declaracion error

  19  declaracion : declaracion_var
  20              | declaracion_func

  21  declaracion_var : tipo lista_var
  22                  | FUNC lista_var
  23                  | error lista_var

  24  tipo : DOUBLE
  25       | ULONG

  26  lista_var : lista_var ',' ID
  27            | ID
  28            | error

  29  declaracion_func : tipo FUNC ID '(' parametro ')' cuerpo_func

  30  parametro : tipo ID

  31  cuerpo_func : sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' END
  32              | sentencia_declarativa error sentencia_compuesta RETURN '(' expresion ')' ';' END
  33              | sentencia_declarativa BEGIN sentencia_compuesta RETURN error expresion ')' ';' END
  34              | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion error ';' END
  35              | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' error
  36              | BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' END
  37              | error sentencia_compuesta RETURN '(' expresion ')' ';' END
  38              | BEGIN sentencia_compuesta RETURN error expresion ')' ';' END
  39              | BEGIN sentencia_compuesta RETURN '(' expresion error ';' END
  40              | BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' error
  41              | sentencia_declarativa error RETURN '(' expresion ')' ';' END
  42              | sentencia_declarativa BEGIN RETURN error expresion ')' ';' END
  43              | sentencia_declarativa BEGIN RETURN '(' expresion error ';' END
  44              | sentencia_declarativa BEGIN RETURN '(' expresion ')' ';' error
  45              | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' POST ':' '(' condicion ')' ';' END
  46              | sentencia_declarativa error sentencia_compuesta RETURN '(' expresion ')' ';' POST ':' '(' condicion ')' ';' END
  47              | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' POST ':' '(' condicion ')' ';' error
  48              | sentencia_declarativa BEGIN sentencia_compuesta RETURN '(' expresion ')' ';' error ':' '(' condicion ')' ';' END

  49  expresion : expresion '+' termino
  50            | expresion '-' termino
  51            | termino

  52  termino : termino '*' factor
  53          | termino '/' factor
  54          | factor

  55  factor : ID
  56         | '-' CTE
  57         | CTE
  58         | ID '(' parametro ')'
  59         | ERROR
  60         | '-' ERROR

  61  sentencia_compuesta : sentencia_compuesta sentencia_simple
  62                      | sentencia_simple

  63  sentencia_simple : ID ASIG expresion ';'
  64                   | ID ERROR expresion ';'
  65                   | seleccion ';'
  66                   | seleccion error
  67                   | print error
  68                   | print ';'
  69                   | iteracion
  70                   | BREAK ';'
  71                   | BREAK error
  72                   | bloque_try ';'
  73                   | bloque_try error

  74  sentencia_compuesta_try : sentencia_compuesta_try sentencia_try
  75                          | sentencia_try

  76  sentencia_try : ID ASIG expresion ';'
  77                | ID error expresion ';'
  78                | ID ASIG expresion error
  79                | seleccion ';'
  80                | seleccion error
  81                | print error
  82                | print ';'
  83                | iteracion
  84                | BREAK ';'
  85                | BREAK error

  86  seleccion : IF '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF
  87            | IF error condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF
  88            | IF '(' condicion error THEN bloque_sentencias ELSE bloque_sentencias ENDIF
  89            | IF '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias error
  90            | IF '(' condicion ')' THEN bloque_sentencias ENDIF
  91            | IF '(' condicion ')' error bloque_sentencias ELSE bloque_sentencias ENDIF
  92            | IF error condicion ')' THEN bloque_sentencias ENDIF
  93            | IF '(' condicion error THEN bloque_sentencias ENDIF
  94            | IF '(' condicion ')' error bloque_sentencias ENDIF
  95            | IF '(' condicion ')' THEN bloque_sentencias error
  96            | error '(' condicion ')' THEN bloque_sentencias ENDIF
  97            | error '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF

  98  condicion : expresion operadores expresion
  99            | expresion

 100  operadores : '>'
 101             | "MAYOR_IGUAL"
 102             | "MENOR_IGUAL"
 103             | '<'
 104             | "IGUAL"
 105             | "DISTINTO"
 106             | "AND"
 107             | "OR"

 108  print : PRINT '(' CADENA ')'
 109        | PRINT '(' CADENA error
 110        | PRINT '(' error ')'
 111        | PRINT error CADENA ')'

 112  iteracion : WHILE '(' condicion ')' DO bloque_sentencias
 113            | error '(' condicion ')' DO bloque_sentencias
 114            | WHILE '(' condicion ')' error bloque_sentencias
 115            | WHILE error condicion ')' DO bloque_sentencias
 116            | WHILE '(' condicion error DO bloque_sentencias

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . bloque_sentencias  (1)

	error  shift 3
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	FUNC  shift 7
	BEGIN  shift 8
	BREAK  shift 9
	ULONG  shift 10
	DOUBLE  shift 11
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_sentencias  goto 14
	bloque_try  goto 15
	sentencia_declarativa  goto 16
	sentencia_simple  goto 17
	declaracion  goto 18
	declaracion_var  goto 19
	declaracion_func  goto 20
	tipo  goto 21
	seleccion  goto 22
	print  goto 23
	iteracion  goto 24


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	bloque_sentencias : error . sentencia_compuesta END ';'  (12)
	declaracion_var : error . lista_var  (23)
	seleccion : error . '(' condicion ')' THEN bloque_sentencias ENDIF  (96)
	seleccion : error . '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (97)
	iteracion : error . '(' condicion ')' DO bloque_sentencias  (113)

	error  shift 25
	ID  shift 26
	IF  shift 5
	PRINT  shift 6
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	'('  shift 27
	.  error

	bloque_try  goto 15
	sentencia_compuesta  goto 28
	sentencia_simple  goto 29
	lista_var  goto 30
	seleccion  goto 22
	print  goto 23
	iteracion  goto 24


state 4
	sentencia_simple : ID . ASIG expresion ';'  (63)
	sentencia_simple : ID . ERROR expresion ';'  (64)

	ASIG  shift 31
	ERROR  shift 32
	.  error


state 5
	seleccion : IF . '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (86)
	seleccion : IF . error condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (87)
	seleccion : IF . '(' condicion error THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (88)
	seleccion : IF . '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias error  (89)
	seleccion : IF . '(' condicion ')' THEN bloque_sentencias ENDIF  (90)
	seleccion : IF . '(' condicion ')' error bloque_sentencias ELSE bloque_sentencias ENDIF  (91)
	seleccion : IF . error condicion ')' THEN bloque_sentencias ENDIF  (92)
	seleccion : IF . '(' condicion error THEN bloque_sentencias ENDIF  (93)
	seleccion : IF . '(' condicion ')' error bloque_sentencias ENDIF  (94)
	seleccion : IF . '(' condicion ')' THEN bloque_sentencias error  (95)

	error  shift 33
	'('  shift 34
	.  error


state 6
	print : PRINT . '(' CADENA ')'  (108)
	print : PRINT . '(' CADENA error  (109)
	print : PRINT . '(' error ')'  (110)
	print : PRINT . error CADENA ')'  (111)

	error  shift 35
	'('  shift 36
	.  error


state 7
	declaracion_var : FUNC . lista_var  (22)

	error  shift 37
	ID  shift 38
	.  error

	lista_var  goto 39


state 8
	bloque_sentencias : BEGIN . sentencia_compuesta END ';'  (9)
	bloque_sentencias : BEGIN . sentencia_compuesta error ';'  (13)
	bloque_sentencias : BEGIN . sentencia_compuesta END error  (14)

	error  shift 40
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_try  goto 15
	sentencia_compuesta  goto 41
	sentencia_simple  goto 29
	seleccion  goto 22
	print  goto 23
	iteracion  goto 24


state 9
	sentencia_simple : BREAK . ';'  (70)
	sentencia_simple : BREAK . error  (71)

	error  shift 42
	';'  shift 43
	.  error


state 10
	tipo : ULONG .  (25)

	.  reduce 25


state 11
	tipo : DOUBLE .  (24)

	.  reduce 24


state 12
	iteracion : WHILE . '(' condicion ')' DO bloque_sentencias  (112)
	iteracion : WHILE . '(' condicion ')' error bloque_sentencias  (114)
	iteracion : WHILE . error condicion ')' DO bloque_sentencias  (115)
	iteracion : WHILE . '(' condicion error DO bloque_sentencias  (116)

	error  shift 44
	'('  shift 45
	.  error


state 13
	bloque_try : TRY . sentencia_try CATCH BEGIN sentencia_compuesta_try END  (2)
	bloque_try : TRY . sentencia_try error BEGIN sentencia_compuesta_try END  (3)
	bloque_try : TRY . sentencia_try CATCH BEGIN sentencia_compuesta_try error  (4)
	bloque_try : TRY . sentencia_try CATCH error sentencia_compuesta_try END  (5)

	error  shift 40
	ID  shift 46
	IF  shift 5
	PRINT  shift 6
	BREAK  shift 47
	WHILE  shift 12
	.  error

	sentencia_try  goto 48
	seleccion  goto 49
	print  goto 50
	iteracion  goto 51


state 14
	programa : ID bloque_sentencias .  (1)

	.  reduce 1


state 15
	sentencia_simple : bloque_try . ';'  (72)
	sentencia_simple : bloque_try . error  (73)

	error  shift 52
	';'  shift 53
	.  error


state 16
	bloque_sentencias : sentencia_declarativa . BEGIN sentencia_compuesta END ';'  (6)
	bloque_sentencias : sentencia_declarativa . BEGIN sentencia_compuesta END error  (7)
	bloque_sentencias : sentencia_declarativa . BEGIN sentencia_compuesta error ';'  (8)
	bloque_sentencias : sentencia_declarativa . error sentencia_compuesta END ';'  (11)
	sentencia_declarativa : sentencia_declarativa . declaracion ';'  (15)
	sentencia_declarativa : sentencia_declarativa . declaracion error  (16)

	error  shift 54
	FUNC  shift 7
	BEGIN  shift 55
	ULONG  shift 10
	DOUBLE  shift 11
	.  error

	declaracion  goto 56
	declaracion_var  goto 19
	declaracion_func  goto 20
	tipo  goto 21


state 17
	bloque_sentencias : sentencia_simple .  (10)

	.  reduce 10


state 18
	sentencia_declarativa : declaracion . ';'  (17)
	sentencia_declarativa : declaracion . error  (18)

	error  shift 57
	';'  shift 58
	.  error


state 19
	declaracion : declaracion_var .  (19)

	.  reduce 19


state 20
	declaracion : declaracion_func .  (20)

	.  reduce 20


state 21
	declaracion_var : tipo . lista_var  (21)
	declaracion_func : tipo . FUNC ID '(' parametro ')' cuerpo_func  (29)

	error  shift 37
	ID  shift 38
	FUNC  shift 59
	.  error

	lista_var  goto 60


state 22
	sentencia_simple : seleccion . ';'  (65)
	sentencia_simple : seleccion . error  (66)

	error  shift 61
	';'  shift 62
	.  error


state 23
	sentencia_simple : print . error  (67)
	sentencia_simple : print . ';'  (68)

	error  shift 63
	';'  shift 64
	.  error


state 24
	sentencia_simple : iteracion .  (69)

	.  reduce 69


state 25
	lista_var : error .  (28)
	seleccion : error . '(' condicion ')' THEN bloque_sentencias ENDIF  (96)
	seleccion : error . '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (97)
	iteracion : error . '(' condicion ')' DO bloque_sentencias  (113)

	'('  shift 27
	error  reduce 28
	';'  reduce 28
	','  reduce 28


state 26
	lista_var : ID .  (27)
	sentencia_simple : ID . ASIG expresion ';'  (63)
	sentencia_simple : ID . ERROR expresion ';'  (64)

	ASIG  shift 31
	ERROR  shift 32
	error  reduce 27
	';'  reduce 27
	','  reduce 27


state 27
	seleccion : error '(' . condicion ')' THEN bloque_sentencias ENDIF  (96)
	seleccion : error '(' . condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (97)
	iteracion : error '(' . condicion ')' DO bloque_sentencias  (113)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 69
	condicion  goto 70
	termino  goto 71
	factor  goto 72


state 28
	bloque_sentencias : error sentencia_compuesta . END ';'  (12)
	sentencia_compuesta : sentencia_compuesta . sentencia_simple  (61)

	error  shift 40
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	END  shift 73
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_try  goto 15
	sentencia_simple  goto 74
	seleccion  goto 22
	print  goto 23
	iteracion  goto 24


state 29
	sentencia_compuesta : sentencia_simple .  (62)

	.  reduce 62


state 30
	declaracion_var : error lista_var .  (23)
	lista_var : lista_var . ',' ID  (26)

	','  shift 75
	error  reduce 23
	';'  reduce 23


state 31
	sentencia_simple : ID ASIG . expresion ';'  (63)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 76
	termino  goto 71
	factor  goto 72


state 32
	sentencia_simple : ID ERROR . expresion ';'  (64)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 77
	termino  goto 71
	factor  goto 72


state 33
	seleccion : IF error . condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (87)
	seleccion : IF error . condicion ')' THEN bloque_sentencias ENDIF  (92)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 69
	condicion  goto 78
	termino  goto 71
	factor  goto 72


state 34
	seleccion : IF '(' . condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (86)
	seleccion : IF '(' . condicion error THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (88)
	seleccion : IF '(' . condicion ')' THEN bloque_sentencias ELSE bloque_sentencias error  (89)
	seleccion : IF '(' . condicion ')' THEN bloque_sentencias ENDIF  (90)
	seleccion : IF '(' . condicion ')' error bloque_sentencias ELSE bloque_sentencias ENDIF  (91)
	seleccion : IF '(' . condicion error THEN bloque_sentencias ENDIF  (93)
	seleccion : IF '(' . condicion ')' error bloque_sentencias ENDIF  (94)
	seleccion : IF '(' . condicion ')' THEN bloque_sentencias error  (95)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 69
	condicion  goto 79
	termino  goto 71
	factor  goto 72


state 35
	print : PRINT error . CADENA ')'  (111)

	CADENA  shift 80
	.  error


state 36
	print : PRINT '(' . CADENA ')'  (108)
	print : PRINT '(' . CADENA error  (109)
	print : PRINT '(' . error ')'  (110)

	error  shift 81
	CADENA  shift 82
	.  error


state 37
	lista_var : error .  (28)

	.  reduce 28


state 38
	lista_var : ID .  (27)

	.  reduce 27


state 39
	declaracion_var : FUNC lista_var .  (22)
	lista_var : lista_var . ',' ID  (26)

	','  shift 75
	error  reduce 22
	';'  reduce 22


state 40
	seleccion : error . '(' condicion ')' THEN bloque_sentencias ENDIF  (96)
	seleccion : error . '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (97)
	iteracion : error . '(' condicion ')' DO bloque_sentencias  (113)

	'('  shift 27
	.  error


state 41
	bloque_sentencias : BEGIN sentencia_compuesta . END ';'  (9)
	bloque_sentencias : BEGIN sentencia_compuesta . error ';'  (13)
	bloque_sentencias : BEGIN sentencia_compuesta . END error  (14)
	sentencia_compuesta : sentencia_compuesta . sentencia_simple  (61)

	error  shift 83
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	END  shift 84
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_try  goto 15
	sentencia_simple  goto 74
	seleccion  goto 22
	print  goto 23
	iteracion  goto 24


state 42
	sentencia_simple : BREAK error .  (71)

	.  reduce 71


state 43
	sentencia_simple : BREAK ';' .  (70)

	.  reduce 70


state 44
	iteracion : WHILE error . condicion ')' DO bloque_sentencias  (115)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 69
	condicion  goto 85
	termino  goto 71
	factor  goto 72


state 45
	iteracion : WHILE '(' . condicion ')' DO bloque_sentencias  (112)
	iteracion : WHILE '(' . condicion ')' error bloque_sentencias  (114)
	iteracion : WHILE '(' . condicion error DO bloque_sentencias  (116)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 69
	condicion  goto 86
	termino  goto 71
	factor  goto 72


state 46
	sentencia_try : ID . ASIG expresion ';'  (76)
	sentencia_try : ID . error expresion ';'  (77)
	sentencia_try : ID . ASIG expresion error  (78)

	error  shift 87
	ASIG  shift 88
	.  error


state 47
	sentencia_try : BREAK . ';'  (84)
	sentencia_try : BREAK . error  (85)

	error  shift 89
	';'  shift 90
	.  error


state 48
	bloque_try : TRY sentencia_try . CATCH BEGIN sentencia_compuesta_try END  (2)
	bloque_try : TRY sentencia_try . error BEGIN sentencia_compuesta_try END  (3)
	bloque_try : TRY sentencia_try . CATCH BEGIN sentencia_compuesta_try error  (4)
	bloque_try : TRY sentencia_try . CATCH error sentencia_compuesta_try END  (5)

	error  shift 91
	CATCH  shift 92
	.  error


state 49
	sentencia_try : seleccion . ';'  (79)
	sentencia_try : seleccion . error  (80)

	error  shift 93
	';'  shift 94
	.  error


state 50
	sentencia_try : print . error  (81)
	sentencia_try : print . ';'  (82)

	error  shift 95
	';'  shift 96
	.  error


state 51
	sentencia_try : iteracion .  (83)

	.  reduce 83


state 52
	sentencia_simple : bloque_try error .  (73)

	.  reduce 73


state 53
	sentencia_simple : bloque_try ';' .  (72)

	.  reduce 72


state 54
	bloque_sentencias : sentencia_declarativa error . sentencia_compuesta END ';'  (11)
	declaracion_var : error . lista_var  (23)

	error  shift 25
	ID  shift 26
	IF  shift 5
	PRINT  shift 6
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_try  goto 15
	sentencia_compuesta  goto 97
	sentencia_simple  goto 29
	lista_var  goto 30
	seleccion  goto 22
	print  goto 23
	iteracion  goto 24


state 55
	bloque_sentencias : sentencia_declarativa BEGIN . sentencia_compuesta END ';'  (6)
	bloque_sentencias : sentencia_declarativa BEGIN . sentencia_compuesta END error  (7)
	bloque_sentencias : sentencia_declarativa BEGIN . sentencia_compuesta error ';'  (8)

	error  shift 40
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_try  goto 15
	sentencia_compuesta  goto 98
	sentencia_simple  goto 29
	seleccion  goto 22
	print  goto 23
	iteracion  goto 24


state 56
	sentencia_declarativa : sentencia_declarativa declaracion . ';'  (15)
	sentencia_declarativa : sentencia_declarativa declaracion . error  (16)

	error  shift 99
	';'  shift 100
	.  error


state 57
	sentencia_declarativa : declaracion error .  (18)

	.  reduce 18


state 58
	sentencia_declarativa : declaracion ';' .  (17)

	.  reduce 17


state 59
	declaracion_func : tipo FUNC . ID '(' parametro ')' cuerpo_func  (29)

	ID  shift 101
	.  error


state 60
	declaracion_var : tipo lista_var .  (21)
	lista_var : lista_var . ',' ID  (26)

	','  shift 75
	error  reduce 21
	';'  reduce 21


state 61
	sentencia_simple : seleccion error .  (66)

	.  reduce 66


state 62
	sentencia_simple : seleccion ';' .  (65)

	.  reduce 65


state 63
	sentencia_simple : print error .  (67)

	.  reduce 67


state 64
	sentencia_simple : print ';' .  (68)

	.  reduce 68


state 65
	factor : ID .  (55)
	factor : ID . '(' parametro ')'  (58)

	'('  shift 102
	error  reduce 55
	"OR"  reduce 55
	"AND"  reduce 55
	'>'  reduce 55
	'<'  reduce 55
	"DISTINTO"  reduce 55
	"MAYOR_IGUAL"  reduce 55
	"MENOR_IGUAL"  reduce 55
	"IGUAL"  reduce 55
	'+'  reduce 55
	'-'  reduce 55
	'*'  reduce 55
	'/'  reduce 55
	';'  reduce 55
	')'  reduce 55


state 66
	factor : CTE .  (57)

	.  reduce 57


state 67
	factor : ERROR .  (59)

	.  reduce 59


state 68
	factor : '-' . CTE  (56)
	factor : '-' . ERROR  (60)

	CTE  shift 103
	ERROR  shift 104
	.  error


state 69
	expresion : expresion . '+' termino  (49)
	expresion : expresion . '-' termino  (50)
	condicion : expresion . operadores expresion  (98)
	condicion : expresion .  (99)

	"OR"  shift 105
	"AND"  shift 106
	'>'  shift 107
	'<'  shift 108
	"DISTINTO"  shift 109
	"MAYOR_IGUAL"  shift 110
	"MENOR_IGUAL"  shift 111
	"IGUAL"  shift 112
	'+'  shift 113
	'-'  shift 114
	error  reduce 99
	')'  reduce 99

	operadores  goto 115


state 70
	seleccion : error '(' condicion . ')' THEN bloque_sentencias ENDIF  (96)
	seleccion : error '(' condicion . ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (97)
	iteracion : error '(' condicion . ')' DO bloque_sentencias  (113)

	')'  shift 116
	.  error


state 71
	expresion : termino .  (51)
	termino : termino . '*' factor  (52)
	termino : termino . '/' factor  (53)

	'*'  shift 117
	'/'  shift 118
	error  reduce 51
	"OR"  reduce 51
	"AND"  reduce 51
	'>'  reduce 51
	'<'  reduce 51
	"DISTINTO"  reduce 51
	"MAYOR_IGUAL"  reduce 51
	"MENOR_IGUAL"  reduce 51
	"IGUAL"  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	';'  reduce 51
	')'  reduce 51


state 72
	termino : factor .  (54)

	.  reduce 54


state 73
	bloque_sentencias : error sentencia_compuesta END . ';'  (12)

	';'  shift 119
	.  error


state 74
	sentencia_compuesta : sentencia_compuesta sentencia_simple .  (61)

	.  reduce 61


state 75
	lista_var : lista_var ',' . ID  (26)

	ID  shift 120
	.  error


state 76
	expresion : expresion . '+' termino  (49)
	expresion : expresion . '-' termino  (50)
	sentencia_simple : ID ASIG expresion . ';'  (63)

	'+'  shift 113
	'-'  shift 114
	';'  shift 121
	.  error


state 77
	expresion : expresion . '+' termino  (49)
	expresion : expresion . '-' termino  (50)
	sentencia_simple : ID ERROR expresion . ';'  (64)

	'+'  shift 113
	'-'  shift 114
	';'  shift 122
	.  error


state 78
	seleccion : IF error condicion . ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (87)
	seleccion : IF error condicion . ')' THEN bloque_sentencias ENDIF  (92)

	')'  shift 123
	.  error


state 79
	seleccion : IF '(' condicion . ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (86)
	seleccion : IF '(' condicion . error THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (88)
	seleccion : IF '(' condicion . ')' THEN bloque_sentencias ELSE bloque_sentencias error  (89)
	seleccion : IF '(' condicion . ')' THEN bloque_sentencias ENDIF  (90)
	seleccion : IF '(' condicion . ')' error bloque_sentencias ELSE bloque_sentencias ENDIF  (91)
	seleccion : IF '(' condicion . error THEN bloque_sentencias ENDIF  (93)
	seleccion : IF '(' condicion . ')' error bloque_sentencias ENDIF  (94)
	seleccion : IF '(' condicion . ')' THEN bloque_sentencias error  (95)

	error  shift 124
	')'  shift 125
	.  error


state 80
	print : PRINT error CADENA . ')'  (111)

	')'  shift 126
	.  error


state 81
	print : PRINT '(' error . ')'  (110)

	')'  shift 127
	.  error


state 82
	print : PRINT '(' CADENA . ')'  (108)
	print : PRINT '(' CADENA . error  (109)

	error  shift 128
	')'  shift 129
	.  error


state 83
	bloque_sentencias : BEGIN sentencia_compuesta error . ';'  (13)
	seleccion : error . '(' condicion ')' THEN bloque_sentencias ENDIF  (96)
	seleccion : error . '(' condicion ')' THEN bloque_sentencias ELSE bloque_sentencias ENDIF  (97)
	iteracion : error . '(' condicion ')' DO bloque_sentencias  (113)

	';'  shift 130
	'('  shift 27
	.  error


state 84
	bloque_sentencias : BEGIN sentencia_compuesta END . ';'  (9)
	bloque_sentencias : BEGIN sentencia_compuesta END . error  (14)

	error  shift 131
	';'  shift 132
	.  error


state 85
	iteracion : WHILE error condicion . ')' DO bloque_sentencias  (115)

	')'  shift 133
	.  error


state 86
	iteracion : WHILE '(' condicion . ')' DO bloque_sentencias  (112)
	iteracion : WHILE '(' condicion . ')' error bloque_sentencias  (114)
	iteracion : WHILE '(' condicion . error DO bloque_sentencias  (116)

	error  shift 134
	')'  shift 135
	.  error


state 87
	sentencia_try : ID error . expresion ';'  (77)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 136
	termino  goto 71
	factor  goto 72


state 88
	sentencia_try : ID ASIG . expresion ';'  (76)
	sentencia_try : ID ASIG . expresion error  (78)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 137
	termino  goto 71
	factor  goto 72


state 89
	sentencia_try : BREAK error .  (85)

	.  reduce 85


state 90
	sentencia_try : BREAK ';' .  (84)

	.  reduce 84


state 91
	bloque_try : TRY sentencia_try error . BEGIN sentencia_compuesta_try END  (3)

	BEGIN  shift 138
	.  error


state 92
	bloque_try : TRY sentencia_try CATCH . BEGIN sentencia_compuesta_try END  (2)
	bloque_try : TRY sentencia_try CATCH . BEGIN sentencia_compuesta_try error  (4)
	bloque_try : TRY sentencia_try CATCH . error sentencia_compuesta_try END  (5)

	error  shift 139
	BEGIN  shift 140
	.  error


state 93
	sentencia_try : seleccion error .  (80)

	.  reduce 80


state 94
	sentencia_try : seleccion ';' .  (79)

	.  reduce 79


state 95
	sentencia_try : print error .  (81)

	.  reduce 81


state 96
	sentencia_try : print ';' .  (82)

	.  reduce 82


state 97
	bloque_sentencias : sentencia_declarativa error sentencia_compuesta . END ';'  (11)
	sentencia_compuesta : sentencia_compuesta . sentencia_simple  (61)

	error  shift 40
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	END  shift 141
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_try  goto 15
	sentencia_simple  goto 74
	seleccion  goto 22
	print  goto 23
	iteracion  goto 24


state 98
	bloque_sentencias : sentencia_declarativa BEGIN sentencia_compuesta . END ';'  (6)
	bloque_sentencias : sentencia_declarativa BEGIN sentencia_compuesta . END error  (7)
	bloque_sentencias : sentencia_declarativa BEGIN sentencia_compuesta . error ';'  (8)
	sentencia_compuesta : sentencia_compuesta . sentencia_simple  (61)

	error  shift 142
	ID  shift 4
	IF  shift 5
	PRINT  shift 6
	END  shift 143
	BREAK  shift 9
	WHILE  shift 12
	TRY  shift 13
	.  error

	bloque_try  goto 15
	sentencia_simple  goto 74
	seleccion  goto 22
	print  goto 23
	iteracion  goto 24


state 99
	sentencia_declarativa : sentencia_declarativa declaracion error .  (16)

	.  reduce 16


state 100
	sentencia_declarativa : sentencia_declarativa declaracion ';' .  (15)

	.  reduce 15


state 101
	declaracion_func : tipo FUNC ID . '(' parametro ')' cuerpo_func  (29)

	'('  shift 144
	.  error


state 102
	factor : ID '(' . parametro ')'  (58)

	ULONG  shift 10
	DOUBLE  shift 11
	.  error

	tipo  goto 145
	parametro  goto 146


state 103
	factor : '-' CTE .  (56)

	.  reduce 56


state 104
	factor : '-' ERROR .  (60)

	.  reduce 60


state 105
	operadores : "OR" .  (107)

	.  reduce 107


state 106
	operadores : "AND" .  (106)

	.  reduce 106


state 107
	operadores : '>' .  (100)

	.  reduce 100


state 108
	operadores : '<' .  (103)

	.  reduce 103


state 109
	operadores : "DISTINTO" .  (105)

	.  reduce 105


state 110
	operadores : "MAYOR_IGUAL" .  (101)

	.  reduce 101


state 111
	operadores : "MENOR_IGUAL" .  (102)

	.  reduce 102


state 112
	operadores : "IGUAL" .  (104)

	.  reduce 104


state 113
	expresion : expresion '+' . termino  (49)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	termino  goto 147
	factor  goto 72


state 114
	expresion : expresion '-' . termino  (50)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	termino  goto 148
	factor  goto 72


state 115
	condicion : expresion operadores . expresion  (98)

	ID  shift 65
	CTE  shift 66
	ERROR  shift 67
	'-'  shift 68
	.  error

	expresion  goto 149
	termino  goto 71
	factor  goto 72


state 116
